[package]
name = "rust-programming-mastery"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
    "section-01-vectors/*", 
    "section-02-functions-and-modularization/*",
    "section-03-structs/*", 
    "section-04-file-systems/*",
    "section-05-dynamic-programming/*"]

[workspace.dependencies]
