[package]
name = "rust-programming-mastery"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
    "section-01-vectors/*", 
    "section-02-functions/*",
    "section-03-user-input/*", 
    "section-04-structs/*", 
    "section-05-file-systems/*",
    "section-06-dynamic-programming/*",
    "section-07-data-structures/*",
    "section-08-benchmarking/*"]

[workspace.dependencies]
