[package]
name = "rust-programming-mastery"
version = "0.1.0"
edition = "2024"

[lib]
name = "lib_dot_rs"

[workspace]
resolver = "3"
members = [
    "section-01-code-modularization/*",
    "section-02-vectors/*", 
    "section-03-functions/*",
    "section-04-user-input/*", 
    "section-05-structs/*", 
    "section-06-file-systems/*",
    "section-07-dynamic-programming/*",
    "section-08-data-structures/*",
    "section-09-benchmarking/*",
]

[workspace.dependencies]
